--- a/ahus-pwa/package.json
+++ b/ahus-pwa/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@humblebee/styled-components-breakpoint": "^2.1.3",
     "node-sass": "^4.9.0",
     "npm": "^6.0.1",
     "push.js": "^1.0.5",
