--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "barryvdh/laravel-cors": "^0.11.0",
         "fideloper/proxy": "^4.0",
         "fzaninotto/faker": "^1.7",
+        "graham-campbell/binput": "^5.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "tcg/voyager": "^1.1"
