--- a/ahus-pwa/package.json
+++ b/ahus-pwa/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@humblebee/styled-components-breakpoint": "^2.1.3",
+    "axios": "^0.18.0",
     "node-sass": "^4.9.0",
     "npm": "^6.0.1",
     "push.js": "^1.0.5",
