--- a/ahus-pwa/package.json
+++ b/ahus-pwa/package.json
@@ -14,6 +14,7 @@
     "react-router": "^3.2.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "react-simple-line-icons": "^1.0.8",
     "styled-components": "^3.2.6",
     "web-push": "^3.3.1"
   },
