--- a/ahus-pwa/package.json
+++ b/ahus-pwa/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@humblebee/styled-components-breakpoint": "^2.1.3",
+    "animated": "^0.2.2",
     "axios": "^0.18.0",
     "node-sass": "^4.9.0",
     "npm": "^6.0.1",
@@ -15,6 +16,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "react-simple-line-icons": "^1.0.8",
+    "react-transition-group": "^1.2.1",
     "styled-components": "^3.2.6",
     "web-push": "^3.3.1"
   },
