small fixes and added geolocation

--- a/ahus-pwa/package.json
+++ b/ahus-pwa/package.json
@@ -6,12 +6,14 @@
     "@humblebee/styled-components-breakpoint": "^2.1.3",
     "animated": "^0.2.2",
     "axios": "^0.18.0",
+    "google-maps-react": "^2.0.2",
     "node-sass": "^4.9.0",
     "npm": "^6.0.1",
     "push.js": "^1.0.5",
     "react": "^16.3.2",
     "react-burger-menu": "^2.4.4",
     "react-dom": "^16.3.2",
+    "react-geolocation": "^1.0.3",
     "react-router": "^3.2.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
