--- a/ahus-pwa/package.json
+++ b/ahus-pwa/package.json
@@ -11,9 +11,10 @@
     "npm": "^6.0.1",
     "push.js": "^1.0.5",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2",
     "react-burger-menu": "^2.4.4",
+    "react-dom": "^16.3.2",
     "react-geolocation": "^1.0.3",
+    "react-google-maps": "^9.4.5",
     "react-router": "^3.2.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
