--- a/ahus-pwa/package.json
+++ b/ahus-pwa/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.3.2",
     "react-geolocation": "^1.0.3",
     "react-google-maps": "^9.4.5",
+    "react-intl": "^2.4.0",
     "react-router": "^3.2.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
