--- a/ahus-pwa/firebase.json
+++ b/ahus-pwa/firebase.json
@@ -10,19 +10,19 @@
        "source" : "**/*.@(eot|otf|ttf|ttc|woff|font.css)",
        "headers" : [ {
          "key" : "Access-Control-Allow-Origin",
-         "value" : "*"
+         "value" : "max-age=86400"
        } ]
        }, {
-       "source" : "**/*.@(jpg|jpeg|gif|png)",
+       "source" : "/Assets/Images/*.@(jpg|jpeg|gif|png)",
        "headers" : [ {
          "key" : "Cache-Control",
-         "value" : "max-age=7200"
+         "value" : "max-age=86400"
        } ]
        }, {
        "source" : "404.html",
        "headers" : [ {
          "key" : "Cache-Control",
-         "value" : "max-age=300"
+         "value" : "max-age=400"
        } ]
      } ],
      "cleanUrls": true,
